--- a/login.html
+++ b/login.html
@@ -4,37 +4,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Log In - ZENOA</title>
+    <title>Secure Access - ZENOA</title>
     <link rel="stylesheet" href="styles.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Rajdhani:wght@300;500;700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
+    <div class="overlay"></div>
     <div class="container flex-center" style="min-height: 100vh;">
-        <div class="auth-container" style="width: 100%;">
-            <h2 style="text-align: center;">Welcome Back</h2>
+
+        <div class="card-glass"
+            style="max-width: 400px; margin: 0 auto; width: 100%; border-top: 2px solid var(--gold-primary);">
+            <div style="text-align: center; margin-bottom: 2rem;">
+                <div
+                    style="font-size: 0.8rem; letter-spacing: 3px; color: var(--gold-primary); margin-bottom: 0.5rem; text-transform: uppercase;">
+                    Secure Access</div>
+                <h2 style="font-size: 2.5rem; margin: 0; text-shadow: 0 0 20px rgba(255, 255, 255, 0.1);">IDENTIFY</h2>
+            </div>
+
             <form id="login-form">
                 <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" id="email" required>
+                    <label for="email" style="color: var(--text-secondary); letter-spacing: 1px;">OPERATIVE ID
+                        (EMAIL)</label>
+                    <input type="email" id="email" required
+                        style="background: rgba(0,0,0,0.3); border: 1px solid var(--glass-border); color: #fff; text-align: center; font-family: var(--font-ui); letter-spacing: 1px;">
                 </div>
                 <div class="form-group">
-                    <label for="password">Password</label>
-                    <input type="password" id="password" required>
+                    <label for="password" style="color: var(--text-secondary); letter-spacing: 1px;">ACCESS CODE</label>
+                    <input type="password" id="password" required
+                        style="background: rgba(0,0,0,0.3); border: 1px solid var(--glass-border); color: #fff; text-align: center; letter-spacing: 2px;">
                 </div>
-                <button type="submit" class="btn btn-primary btn-block">Log In</button>
+                <button type="submit" class="btn btn-primary btn-block"
+                    style="padding: 1rem; margin-top: 1rem;">AUTHENTICATE</button>
             </form>
-            <p style="text-align: center; margin-top: 1rem;">
-                New here? <a href="signup.html" style="color: var(--text-primary);">Create Account</a>
-            </p>
+
             <div style="text-align: center; margin-top: 2rem;">
+                <p style="font-size: 0.8rem; color: var(--text-secondary);">
+                    NEW RECRUIT? <a href="signup.html"
+                        style="color: var(--gold-primary); text-decoration: none; font-weight: 700;">ENLIST NOW</a>
+                </p>
+            </div>
+
+            <div
+                style="text-align: center; margin-top: 1.5rem; border-top: 1px solid var(--glass-border); padding-top: 1.5rem;">
                 <button id="guest-btn"
-                    style="background: transparent; border: 1px solid var(--text-secondary); color: var(--text-secondary); padding: 0.5rem 1rem; border-radius: var(--radius-sm); cursor: pointer;">
-                    Play as Guest (No Save)
+                    style="background: transparent; border: 1px solid var(--text-secondary); color: var(--text-muted); padding: 0.5rem 1rem; border-radius: 4px; cursor: pointer; font-size: 0.7rem; letter-spacing: 1px; transition: all 0.3s;">
+                    INITIATE GUEST PROTOCOL
                 </button>
             </div>
+
             <div style="text-align: center; margin-top: 1rem;">
-                <a href="index.html" style="color: var(--text-secondary); text-decoration: none; font-size: 0.9rem;">←
-                    Back to Home</a>
+                <a href="index.html"
+                    style="color: var(--text-secondary); text-decoration: none; font-size: 0.7rem; text-transform: uppercase; letter-spacing: 1px;">←
+                    Return to Base</a>
             </div>
         </div>
     </div>
@@ -50,12 +74,22 @@
             const email = document.getElementById('email').value;
             const password = document.getElementById('password').value;
 
-            loginUser(email, password);
+            const btn = loginForm.querySelector('button[type="submit"]');
+            btn.innerHTML = "VERIFYING CREDENTIALS...";
+            btn.disabled = true;
+
+            loginUser(email, password).catch(err => {
+                btn.innerHTML = "AUTHENTICATE";
+                btn.disabled = false;
+                alert(err.message);
+            });
         });
 
         document.getElementById('guest-btn').addEventListener('click', () => {
             const btn = document.getElementById('guest-btn');
-            btn.textContent = "Entering...";
+            btn.textContent = "ACCESSING GUEST NETWORK...";
+            btn.style.color = "var(--neon-blue)";
+            btn.style.borderColor = "var(--neon-blue)";
             btn.disabled = true;
             loginAsGuest();
         });
