--- a/play.html
+++ b/play.html
@@ -6,50 +6,93 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Live Mission - ZENOA</title>
     <link rel="stylesheet" href="styles.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Rajdhani:wght@300;500;700&display=swap"
+        rel="stylesheet">
+    <style>
+        .option-btn {
+            background: rgba(255, 255, 255, 0.03);
+            border: 1px solid var(--glass-border);
+            padding: 1.5rem;
+            margin-bottom: 1rem;
+            cursor: pointer;
+            transition: all 0.3s var(--ease-out);
+            position: relative;
+            overflow: hidden;
+            clip-path: polygon(10px 0, 100% 0, 100% calc(100% - 10px), calc(100% - 10px) 100%, 0 100%, 0 10px);
+        }
+
+        .option-btn:hover {
+            background: rgba(255, 255, 255, 0.1);
+            border-color: var(--gold-primary);
+            transform: translateX(10px);
+        }
+
+        .option-btn.selected {
+            background: var(--gold-primary);
+            color: #000;
+            border-color: var(--gold-primary);
+            box-shadow: 0 0 20px var(--gold-glow);
+            font-weight: 700;
+        }
+
+        .scenario-text {
+            font-family: var(--font-display);
+            font-size: 1.8rem;
+            line-height: 1.4;
+            text-shadow: 0 0 20px rgba(0, 0, 0, 0.8);
+        }
+    </style>
 </head>
 
-<body style="background: radial-gradient(circle at center, #111, #000); min-height: 100vh;">
+<body style="overflow: hidden;">
+    <div class="overlay"></div>
 
-    <div class="cinematic-container">
-        <!-- TOP BAR -->
-        <div
-            style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 2rem; padding: 0 1rem;">
-            <div style="display: flex; align-items: center; gap: 1rem;">
-                <span id="category-badge" class="tier-badge"
-                    style="background: rgba(255,255,255,0.1); border-color: var(--text-secondary); color: var(--text-primary);">LOADING...</span>
-                <div style="height: 4px; width: 100px; background: rgba(255,255,255,0.1); border-radius: 2px;">
+    <!-- Cinematic Container -->
+    <div class="container"
+        style="max-width: 800px; padding-top: 2rem; min-height: 100vh; display: flex; flex-direction: column;">
+
+        <!-- TOP HUD -->
+        <div class="flex-between"
+            style="margin-bottom: 3rem; border-bottom: 1px solid var(--glass-border); padding-bottom: 1rem;">
+            <div class="flex-center" style="gap: 1rem;">
+                <span id="category-badge" class="badge badge-tier-legend"
+                    style="font-size: 0.7rem; animation: glow-pulse 3s infinite;">LOADING...</span>
+                <div style="height: 2px; width: 100px; background: rgba(255,255,255,0.1);">
                     <div id="progress-bar-top"
-                        style="height: 100%; width: 0%; background: var(--accent-color); box-shadow: 0 0 10px var(--accent-glow);">
+                        style="height: 100%; width: 0%; background: var(--neon-blue); box-shadow: 0 0 10px var(--neon-blue-glow); transition: width 0.5s;">
                     </div>
                 </div>
             </div>
 
             <div id="timer"
-                style="font-family: monospace; font-size: 1.5rem; font-weight: 700; color: var(--danger-color); text-shadow: 0 0 10px var(--danger-color);">
+                style="font-family: var(--font-display); font-size: 1.5rem; color: #ff4444; text-shadow: 0 0 10px rgba(255, 0, 0, 0.5); letter-spacing: 2px;">
                 LIVE
             </div>
         </div>
 
         <!-- MAIN CARD -->
-        <div class="question-card">
-            <h2 id="scenario-text" class="scenario-text" style="color: #fff; margin-bottom: 2.5rem;">
+        <div class="card-glass"
+            style="flex: 1; display: flex; flex-direction: column; justify-content: center; border: none; background: transparent; box-shadow: none;">
+
+            <h2 id="scenario-text" class="scenario-text" style="color: #fff; margin-bottom: 3rem; min-height: 120px;">
                 Initializing scenario parameters...
             </h2>
 
-            <div id="options-container" style="display: flex; flex-direction: column; gap: 0.5rem;">
+            <div id="options-container">
                 <!-- JS Injected -->
             </div>
 
             <p id="error-msg"
-                style="color: var(--danger-color); text-align: center; margin-top: 1rem; font-weight: 700;"></p>
+                style="color: #ff4444; text-align: center; margin-top: 1rem; font-family: var(--font-ui); text-transform: uppercase; letter-spacing: 1px;">
+            </p>
         </div>
 
         <!-- CONTROLS -->
         <div id="next-btn-container"
-            style="margin-top: 2rem; text-align: center; opacity: 0; transition: opacity 0.5s;">
-            <button id="next-btn" class="btn btn-primary"
-                style="padding: 1rem 4rem; font-size: 1.1rem; clip-path: polygon(10% 0, 100% 0, 100% 100%, 0% 100%);">
-                CONFIRM & PROCEED
+            style="margin-top: 2rem; margin-bottom: 4rem; text-align: center; opacity: 0; transition: opacity 0.5s;">
+            <button id="next-btn" class="btn btn-primary" style="padding: 1.2rem 4rem; font-size: 1.2rem; width: 100%;">
+                CONFIRM PROTOCOL
             </button>
         </div>
 
@@ -117,7 +160,7 @@
             }
 
             // Update UI
-            document.getElementById('category-badge').textContent = question.category || "GENERAL";
+            document.getElementById('category-badge').textContent = (question.category || "GENERAL").toUpperCase();
             const progress = ((index + 1) / totalQuestions) * 100;
             document.getElementById('progress-bar-top').style.width = `${progress}%`;
 
@@ -137,6 +180,7 @@
                 const btn = document.createElement('div');
                 btn.className = 'option-btn';
                 btn.textContent = opt;
+                btn.style.animation = `float 0.5s ease-out ${i * 0.1}s backwards`; // Staggered entrance
 
                 if (savedAnswer === i) {
                     btn.classList.add('selected');
@@ -153,13 +197,12 @@
                         await submitAnswer(roomId, currentUser.uid, qId, i);
                         document.getElementById('next-btn-container').style.opacity = '1';
                     } catch (e) {
-                        document.getElementById('error-msg').textContent = "Transmission failed. Retry.";
+                        document.getElementById('error-msg').textContent = "TRANSMISSION FAILED. RETRY.";
                     }
                 };
                 container.appendChild(btn);
             });
 
-            // Show next button if already answered, but here we can just hide/show based on interaction
             if (savedAnswer !== undefined) {
                 document.getElementById('next-btn-container').style.opacity = '1';
             } else {
@@ -168,18 +211,9 @@
         }
 
         document.getElementById('next-btn').addEventListener('click', () => {
-            // Animate out?
-            const card = document.querySelector('.question-card');
-            card.style.transform = "translateX(-20px)";
-            card.style.opacity = "0";
-
-            setTimeout(() => {
-                localCurrentIndex++;
-                renderQuestion(currentRoomData);
-                card.style.transform = "translateX(0)";
-                card.style.opacity = "1";
-                window.scrollTo(0, 0);
-            }, 300);
+            localCurrentIndex++;
+            window.scrollTo(0, 0);
+            renderQuestion(currentRoomData);
         });
     </script>
 </body>
