--- a/profile.html
+++ b/profile.html
@@ -4,96 +4,145 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Operative Profile - ZENOA</title>
+    <title>Operative Dossier - ZENOA</title>
     <link rel="stylesheet" href="styles.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Rajdhani:wght@300;500;700&display=swap"
+        rel="stylesheet">
+    <style>
+        .stat-bar-container {
+            height: 6px;
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 3px;
+            overflow: hidden;
+            margin-top: 5px;
+        }
+
+        .stat-bar-fill {
+            height: 100%;
+            background: var(--gold-primary);
+            box-shadow: 0 0 10px var(--gold-glow);
+            width: 0%;
+            transition: width 1s ease-out;
+        }
+
+        .val-logical {
+            background: #00f3ff;
+            box-shadow: 0 0 10px rgba(0, 243, 255, 0.4);
+        }
+
+        .val-strategic {
+            background: #bd00ff;
+            box-shadow: 0 0 10px rgba(189, 0, 255, 0.4);
+        }
+
+        .val-social {
+            background: #ff0055;
+            box-shadow: 0 0 10px rgba(255, 0, 85, 0.4);
+        }
+
+        .val-political {
+            background: #ffd700;
+            box-shadow: 0 0 10px rgba(255, 215, 0, 0.4);
+        }
+
+        .val-adaptive {
+            background: #00ff66;
+            box-shadow: 0 0 10px rgba(0, 255, 102, 0.4);
+        }
+    </style>
 </head>
 
 <body>
-    <div class="container">
-        <header
-            style="display: flex; justify-content: space-between; align-items: center; padding: 2rem 0; border-bottom: 1px solid var(--surface-border);">
-            <div style="font-weight: 900; font-size: 1.5rem; letter-spacing: 2px;">ZENOA</div>
-            <nav style="display: flex; gap: 1rem;">
+    <div class="overlay"></div>
+    <div class="container" style="max-width: 1100px;">
+        <header class="flex-between" style="padding: 1.5rem 0; border-bottom: 1px solid var(--glass-border);">
+            <div
+                style="font-family: var(--font-display); font-size: 1.5rem; color: var(--gold-primary); letter-spacing: 2px;">
+                ZENOA</div>
+            <nav class="flex-center" style="gap: 1rem;">
                 <a href="dashboard.html" class="btn btn-secondary"
-                    style="padding: 0.5rem 1rem; font-size: 0.9rem;">DASHBOARD</a>
+                    style="padding: 0.5rem 1rem; font-size: 0.8rem;">DASHBOARD</a>
                 <button id="logout-btn" class="btn btn-secondary"
-                    style="padding: 0.5rem 1rem; font-size: 0.9rem; border-color: var(--danger-color); color: var(--danger-color);">LOG
-                    OUT</button>
+                    style="padding: 0.5rem 1rem; color: #ff4444; border-color: rgba(255,0,0,0.3);">LOGOUT</button>
             </nav>
         </header>
 
-        <main style="padding-top: 3rem; max-width: 1000px; margin: 0 auto;">
+        <main style="padding-top: 3rem;">
 
             <!-- DOSSIER HEADER -->
-            <div class="card" style="margin-bottom: 2rem; border-left: 5px solid var(--accent-color); padding: 2.5rem;">
-                <div
-                    style="display: flex; justify-content: space-between; align-items: flex-start; flex-wrap: wrap; gap: 2rem;">
+            <div class="card-glass"
+                style="margin-bottom: 2rem; border-left: 2px solid var(--gold-primary); padding: 2.5rem;">
+                <div class="flex-between" style="align-items: flex-start; flex-wrap: wrap; gap: 2rem;">
 
                     <div style="flex: 1;">
                         <div
                             style="font-size: 0.8rem; text-transform: uppercase; color: var(--text-secondary); letter-spacing: 2px; margin-bottom: 0.5rem;">
-                            Operative Identity</div>
-                        <h1 id="user-name" style="margin: 0; font-size: 3rem; line-height: 1;">...</h1>
+                            OPERATIVE IDENTITY
+                        </div>
+                        <h1 id="user-name"
+                            style="margin: 0; font-size: 3rem; line-height: 1; text-shadow: 0 0 20px rgba(255,255,255,0.1);">
+                            ...</h1>
                         <p id="user-college"
-                            style="font-size: 1.2rem; color: var(--text-secondary); margin-top: 0.5rem;">
-                            Retrieving data...</p>
+                            style="font-size: 1.1rem; color: var(--text-muted); margin-top: 0.5rem; text-transform: uppercase; letter-spacing: 1px;">
+                            RETRIEVING RECORD...
+                        </p>
                     </div>
 
                     <div style="text-align: right;">
                         <div
                             style="font-size: 0.8rem; text-transform: uppercase; color: var(--text-secondary); letter-spacing: 2px;">
-                            Class Determination</div>
+                            CLASS DESIGNATION
+                        </div>
                         <div id="dominant-type"
-                            style="font-size: 2rem; font-weight: 800; color: var(--accent-color); text-transform: uppercase; margin-top: 0.5rem; text-shadow: 0 0 20px rgba(0, 242, 255, 0.3);">
-                            U/A
+                            style="font-family: var(--font-display); font-size: 2.5rem; font-weight: 700; color: var(--gold-primary); text-transform: uppercase; margin-top: 0.5rem; text-shadow: 0 0 20px var(--gold-glow);">
+                            UNRANKED
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); gap: 2rem;">
+            <div class="grid-2" style="grid-template-columns: 1.2fr 0.8fr;">
 
                 <!-- INTELLIGENCE PROFILE -->
-                <div class="card">
-                    <h2 style="font-size: 1.3rem;">Intelligence Matrix</h2>
+                <div class="card-glass">
+                    <h2 style="font-size: 1.2rem; margin-bottom: 0.5rem; color: #fff;">INTELLIGENCE MATRIX</h2>
                     <p style="font-size: 0.9rem; margin-bottom: 2rem; color: var(--text-secondary);">Quantitative
                         aptitude analysis across 5 sectors.</p>
 
-                    <div style="display: flex; flex-direction: column; gap: 1.5rem;">
-                        <div id="stats-container">
-                            <!-- Example Item (Injected via JS) -->
-                        </div>
+                    <div id="stats-container" class="flex-col" style="gap: 1.5rem;">
+                        <!-- Example Item (Injected via JS) -->
                     </div>
                 </div>
 
                 <!-- CAREER DATA -->
-                <div style="display: flex; flex-direction: column; gap: 2rem;">
-                    <div class="card">
-                        <h2 style="font-size: 1.3rem;">Service Record</h2>
-                        <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 1rem; margin-top: 1.5rem;">
+                <div class="flex-col" style="gap: 2rem;">
+                    <div class="card-glass">
+                        <h2 style="font-size: 1.2rem; color: #fff; margin-bottom: 1.5rem;">SERVICE RECORD</h2>
+                        <div class="grid-2" style="gap: 1rem;">
                             <div
-                                style="text-align: center; background: rgba(255,255,255,0.02); padding: 1rem; border-radius: 4px;">
+                                style="text-align: center; background: rgba(0,0,0,0.3); padding: 1.5rem; border-radius: 8px; border: 1px solid var(--glass-border);">
                                 <div id="matches-played" style="font-size: 2.5rem; font-weight: 700; color: #fff;">0
                                 </div>
                                 <div
-                                    style="font-size: 0.7rem; text-transform: uppercase; letter-spacing: 1px; color: var(--text-secondary);">
+                                    style="font-size: 0.7rem; text-transform: uppercase; letter-spacing: 1px; color: var(--text-secondary); margin-top: 5px;">
                                     Missions</div>
                             </div>
                             <div
-                                style="text-align: center; background: rgba(255,255,255,0.02); padding: 1rem; border-radius: 4px;">
+                                style="text-align: center; background: rgba(0,0,0,0.3); padding: 1.5rem; border-radius: 8px; border: 1px solid var(--glass-border);">
                                 <div id="trophies-count"
-                                    style="font-size: 2.5rem; font-weight: 700; color: var(--tier-gold);">0</div>
+                                    style="font-size: 2.5rem; font-weight: 700; color: var(--gold-primary); text-shadow: 0 0 10px var(--gold-glow);">
+                                    0</div>
                                 <div
-                                    style="font-size: 0.7rem; text-transform: uppercase; letter-spacing: 1px; color: var(--text-secondary);">
-                                    Trophies</div>
+                                    style="font-size: 0.7rem; text-transform: uppercase; letter-spacing: 1px; color: var(--text-secondary); margin-top: 5px;">
+                                    Commendations</div>
                             </div>
                         </div>
                     </div>
 
-                    <div class="card" style="flex: 1;">
-                        <h2 style="font-size: 1.3rem;">Badges & Commendations</h2>
-                        <div id="badges-container"
-                            style="display: flex; flex-wrap: wrap; gap: 0.8rem; margin-top: 1.5rem;">
+                    <div class="card-glass" style="flex: 1;">
+                        <h2 style="font-size: 1.2rem; color: #fff; margin-bottom: 1.5rem;">MEDALS & HONORS</h2>
+                        <div id="badges-container" style="display: flex; flex-wrap: wrap; gap: 0.8rem;">
                             <!-- Badges -->
                         </div>
                     </div>
@@ -134,11 +183,10 @@
                         const pct = (val / maxVal) * 100;
 
                         const row = document.createElement('div');
-                        row.style.marginBottom = '1.5rem';
                         row.innerHTML = `
-                            <div style="display: flex; justify-content: space-between; margin-bottom: 0.5rem; font-size: 0.9rem;">
-                                <span style="text-transform: capitalize; font-weight: 600;">${key} Intelligence</span>
-                                <span style="font-family: monospace; color: var(--text-secondary);">${val}</span>
+                            <div class="flex-between" style="margin-bottom: 0.5rem; font-size: 0.9rem;">
+                                <span style="text-transform: capitalize; color: var(--text-primary); letter-spacing: 1px;">${key} Intelligence</span>
+                                <span style="font-family: var(--font-ui); color: var(--text-secondary);">${val}</span>
                             </div>
                             <div class="stat-bar-container">
                                 <div class="stat-bar-fill val-${key}" style="width: ${pct}%;"></div>
@@ -154,13 +202,12 @@
                         badgesContainer.innerHTML = '';
                         profile.badges.forEach(badge => {
                             const badgeEl = document.createElement('span');
-                            badgeEl.className = 'tier-badge tier-gold'; // Generic gold for badges for now
-                            badgeEl.style.fontSize = '0.7rem';
+                            badgeEl.className = 'badge badge-tier-gold';
                             badgeEl.textContent = badge;
                             badgesContainer.appendChild(badgeEl);
                         });
                     } else {
-                        badgesContainer.innerHTML = '<p style="font-size: 0.8rem; color: var(--text-secondary); opacity: 0.5;">No commendations on file.</p>';
+                        badgesContainer.innerHTML = '<p style="font-size: 0.8rem; color: var(--text-secondary); opacity: 0.5; font-style: italic;">No commendations on file.</p>';
                     }
                 }
             }
