--- a/room.html
+++ b/room.html
@@ -4,53 +4,73 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Room Lobby - ZENOA</title>
+    <title>Mission Lobby - ZENOA</title>
     <link rel="stylesheet" href="styles.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Rajdhani:wght@300;500;700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-    <div class="container" style="max-width: 900px; padding-top: 4rem;">
+    <div class="overlay"></div>
+    <div class="container" style="max-width: 1000px; padding-top: 4rem;">
 
         <!-- HEADER / CODE -->
-        <div style="text-align: center; margin-bottom: 3rem;">
+        <div style="text-align: center; margin-bottom: 4rem;">
+            <div class="badge badge-tier-gold"
+                style="font-size: 0.8rem; margin-bottom: 1rem; animation: float 3s ease-in-out infinite;">
+                MISSION BRIEFING
+            </div>
             <div
-                style="font-size: 0.9rem; letter-spacing: 2px; text-transform: uppercase; color: var(--text-secondary); margin-bottom: 0.5rem;">
-                Mission Lobby</div>
-            <div class="room-code-display" id="room-code-display">...</div>
+                style="font-family: var(--font-display); font-size: 1.2rem; color: var(--text-secondary); margin-bottom: 0.5rem; letter-spacing: 4px;">
+                SECURE CHANNEL ESTABLISHED</div>
 
-            <div style="display: flex; gap: 1rem; justify-content: center; margin-top: 1rem;">
-                <button class="btn btn-secondary" id="copy-btn" style="padding: 0.5rem 1.5rem; font-size: 0.8rem;">
-                    <span style="opacity: 0.7;">COPY INVITE LINK</span>
+            <div class="room-code-display" id="room-code-display"
+                style="font-family: var(--font-display); font-size: 5rem; color: var(--gold-primary); text-shadow: 0 0 30px var(--gold-glow); letter-spacing: 10px; margin: 1rem 0;">
+                ...</div>
+
+            <div class="flex-center" style="gap: 1rem; flex-wrap: wrap;">
+                <button class="btn btn-secondary" id="copy-btn" style="min-width: 200px;">
+                    COPY UPLINK
                 </button>
                 <input type="text" id="share-link" readonly style="position: absolute; left: -9999px;">
             </div>
-            <div id="connection-status" style="margin-top: 1rem; font-size: 0.8rem; color: var(--text-secondary);">
-                Connecting to server...
+
+            <div id="connection-status"
+                style="margin-top: 1.5rem; font-family: var(--font-ui); color: var(--neon-blue); text-transform: uppercase; letter-spacing: 2px; font-size: 0.8rem;">
+                <span class="text-neon" style="animation: glow-pulse 2s infinite;">●</span> AWAITING CONNECTION...
             </div>
         </div>
 
-        <div class="card" style="min-height: 400px; display: flex; flex-direction: column;">
-            <div
-                style="display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid var(--surface-border); padding-bottom: 1rem; margin-bottom: 1rem;">
-                <h3 style="margin: 0; font-size: 1.2rem;">Operatives <span id="player-count"
-                        style="color: var(--accent-color);">(0)</span></h3>
-                <div id="waiting-msg" style="font-size: 0.9rem; color: var(--text-secondary); font-style: italic;">
-                    Waiting for host...
+        <div class="card-glass"
+            style="min-height: 500px; display: flex; flex-direction: column; border-color: var(--glass-highlight);">
+            <div class="flex-between"
+                style="border-bottom: 1px solid var(--glass-border); padding-bottom: 1.5rem; margin-bottom: 2rem;">
+                <h3 style="margin: 0; font-size: 1.5rem; display: flex; align-items: center; gap: 10px;">
+                    OPERATIVES <span id="player-count"
+                        style="color: var(--neon-blue); background: rgba(0, 243, 255, 0.1); padding: 2px 10px; border-radius: 4px; font-size: 1rem;">(0)</span>
+                </h3>
+                <div id="waiting-msg"
+                    style="font-family: var(--font-ui); color: var(--text-secondary); letter-spacing: 1px; text-transform: uppercase;">
+                    WAITING FOR COMMANDER...
                 </div>
             </div>
 
-            <div id="players-list" class="player-grid">
+            <!-- Player Grid -->
+            <div id="players-list" class="grid-2"
+                style="grid-template-columns: repeat(auto-fill, minmax(180px, 1fr)); align-content: start; gap: 1.5rem;">
                 <!-- JS Injected -->
             </div>
 
-            <div style="margin-top: auto; padding-top: 2rem; text-align: center;">
+            <div style="margin-top: auto; padding-top: 3rem;">
                 <div id="host-controls" class="hidden">
                     <button id="start-game-btn" class="btn btn-primary"
-                        style="width: 100%; padding: 1.2rem; font-size: 1.2rem; letter-spacing: 2px;">
-                        INITIATE MISSION
+                        style="width: 100%; padding: 1.5rem; font-size: 1.5rem;">
+                        INITIATE MISSION SEQUENCE
                     </button>
-                    <p style="margin-top: 1rem; font-size: 0.8rem; color: var(--text-secondary);">
-                        As host, you control when the assessment begins.
+                    <p
+                        style="text-align: center; margin-top: 1rem; color: var(--text-muted); font-size: 0.8rem; text-transform: uppercase; letter-spacing: 1px;">
+                        Commander Authority Required
                     </p>
                 </div>
             </div>
@@ -59,27 +79,29 @@
 
     <!-- City Prompt Modal -->
     <div id="city-modal" class="hidden"
-        style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.9); backdrop-filter: blur(5px); z-index: 100; display: flex; align-items: center; justify-content: center;">
-        <div class="card"
-            style="width: 90%; max-width: 400px; text-align: center; border: 1px solid var(--accent-color); box-shadow: 0 0 30px rgba(0, 242, 255, 0.2);">
-            <h2 style="margin-bottom: 1rem; color: var(--accent-color);">Identify Sector</h2>
-            <p style="margin-bottom: 1.5rem; color: var(--text-secondary);">Enter your city or region for the global
-                leaderboard.</p>
-            <input type="text" id="city-input" placeholder="e.g. Neo Tokyo"
-                style="width: 100%; padding: 1rem; margin-bottom: 1.5rem; background: rgba(0,0,0,0.5); border: 1px solid var(--surface-border); color: white; text-align: center; font-size: 1.1rem;">
-            <button id="save-city-btn" class="btn btn-primary btn-block">CONFIRM IDENTITY</button>
+        style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.95); backdrop-filter: blur(10px); z-index: 100; display: flex; align-items: center; justify-content: center;">
+        <div class="card-glass"
+            style="width: 90%; max-width: 450px; text-align: center; border: 1px solid var(--neon-blue); box-shadow: 0 0 50px rgba(0, 243, 255, 0.1);">
+            <h2 class="text-neon" style="margin-bottom: 1rem;">IDENTIFY SECTOR</h2>
+            <p style="margin-bottom: 2rem; color: var(--text-secondary);">Enter your base of operations for the global
+                hierarchy.</p>
+            <input type="text" id="city-input" placeholder="REGION / CITY"
+                style="margin-bottom: 2rem; text-align: center; font-size: 1.2rem; letter-spacing: 2px; text-transform: uppercase; border-color: var(--neon-blue);">
+            <button id="save-city-btn" class="btn btn-neon" style="width: 100%;">CONFIRM IDENTITY</button>
         </div>
     </div>
 
     <!-- Countdown Overlay -->
     <div id="countdown-overlay" class="hidden"
-        style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: var(--bg-color); z-index: 200; display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center;">
+        style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: #000; z-index: 200; display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center;">
         <h1
-            style="font-size: 2rem; color: var(--text-secondary); margin-bottom: 2rem; text-transform: uppercase; letter-spacing: 5px;">
-            Mission Launching</h1>
+            style="font-size: 3rem; color: var(--text-secondary); margin-bottom: 4rem; letter-spacing: 10px; animation: float 2s ease-in-out infinite;">
+            MISSION LAUNCH
+        </h1>
         <div id="countdown-timer"
-            style="font-size: 10rem; font-weight: 900; color: var(--accent-color); text-shadow: 0 0 50px var(--accent-color);">
-            3</div>
+            style="font-family: var(--font-display); font-size: 15rem; font-weight: 900; color: var(--gold-primary); text-shadow: 0 0 100px var(--gold-glow); line-height: 1;">
+            3
+        </div>
     </div>
 
     <script type="module">
@@ -105,7 +127,7 @@
 
             const btn = document.getElementById('copy-btn');
             const originalText = btn.innerHTML;
-            btn.innerHTML = '<span style="color: var(--success-color);">LINK COPIED</span>';
+            btn.innerHTML = '<span style="color: var(--neon-blue);">UPLINK COPIED</span>';
             setTimeout(() => { btn.innerHTML = originalText; }, 2000);
         });
 
@@ -147,8 +169,8 @@
             const statusEl = document.getElementById('connection-status');
 
             subscribeToRoom(roomId, (roomData) => {
-                statusEl.textContent = "🟢 SECURE CONNECTION ESTABLISHED";
-                statusEl.style.color = "var(--success-color)";
+                statusEl.innerHTML = `<span class="text-neon">●</span> ENCRYPTED LINK ACTIVE`;
+                statusEl.style.color = "var(--neon-blue)";
 
                 if (!roomData) {
                     alert("Room terminated.");
@@ -168,14 +190,24 @@
 
                 roomData.players.forEach(p => {
                     const el = document.createElement('div');
-                    el.className = 'player-card';
-                    if (p.uid === currentUser.uid) el.classList.add('is-me');
-                    if (p.uid === roomData.hostId) el.classList.add('is-host');
+                    el.className = 'card-glass';
+                    el.style.padding = '1.5rem';
+                    el.style.textAlign = 'center';
+                    el.style.transition = 'all 0.3s';
 
-                    // Avatar placeholder could go here
+                    if (p.uid === currentUser.uid) {
+                        el.style.borderColor = 'var(--gold-primary)';
+                        el.style.boxShadow = '0 0 15px rgba(255, 215, 0, 0.2)';
+                    }
+                    if (p.uid === roomData.hostId) {
+                        // Host styling
+                    }
+
+                    // Avatar placeholder
                     el.innerHTML = `
-                        <div style="font-size: 2rem; margin-bottom: 0.5rem;">👤</div>
-                        <div style="font-weight: 700; font-size: 0.9rem; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">${p.username}</div>
+                        <div style="font-size: 2.5rem; margin-bottom: 1rem;">👤</div>
+                        <div style="font-weight: 700; font-size: 1.1rem; color: #fff; margin-bottom: 0.2rem;">${p.username}</div>
+                        ${p.uid === roomData.hostId ? '<div class="badge badge-tier-gold" style="font-size: 0.6rem;">COMMANDER</div>' : '<div class="badge" style="border: 1px solid var(--text-secondary); color: var(--text-secondary); font-size: 0.6rem;">OPERATIVE</div>'}
                     `;
 
                     list.appendChild(el);
@@ -184,10 +216,12 @@
                 // Host Controls
                 if (currentUser.uid === roomData.hostId) {
                     document.getElementById('host-controls').classList.remove('hidden');
-                    document.getElementById('waiting-msg').innerHTML = '<span style="color: var(--warning-color);">YOU ARE THE HOST</span>';
+                    document.getElementById('waiting-msg').innerHTML = '<span class="text-gold" style="animation: pulse 1s infinite;">AWAITING YOUR COMMAND</span>';
+                    document.getElementById('start-game-btn').disabled = false;
+                    document.getElementById('start-game-btn').innerHTML = "INITIATE MISSION SEQUENCE";
                 } else {
                     document.getElementById('host-controls').classList.add('hidden');
-                    document.getElementById('waiting-msg').innerHTML = 'Waiting for Mission Control...';
+                    document.getElementById('waiting-msg').innerHTML = 'WAITING FOR COMMANDER...';
                 }
             });
         }
@@ -212,6 +246,7 @@
                 } else {
                     clearInterval(interval);
                     timer.textContent = "GO";
+                    timer.style.color = "#fff";
                     setTimeout(() => {
                         window.location.href = `play.html?roomId=${roomId}`;
                     }, 500);
@@ -228,7 +263,8 @@
             } catch (e) {
                 console.error(e);
                 btn.disabled = false;
-                btn.innerHTML = "INITIATE MISSION";
+                btn.innerHTML = "INITIATE MISSION SEQUENCE";
+                alert("Launch Failed: " + e.message);
             }
         });
     </script>
